--- a/src/main/resources/com/confer/imgstoremini/PureViewUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/PureViewUI.fxml
@@ -15,9 +15,11 @@
         </ToolBar>
     </top>
     <center>
-        <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" pannable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="ALWAYS" pannable="true" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="TOP_CENTER">
             <content>
+            <HBox alignment="TOP_CENTER">
                 <ImageView fx:id="dispImageView" fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
+            </HBox>
             </content>
         </ScrollPane>
     </center>
