--- a/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
@@ -19,10 +19,12 @@
                      <content>
                         <GridPane hgap="10.0" vgap="10.0" alignment="CENTER_LEFT">
                            <children>
-                              <Label text="Page Size:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
-                              <Spinner fx:id="pageSizeSPN" GridPane.rowIndex="0" GridPane.columnIndex="1" />
-                              <Label text="Region Cuts:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
-                              <Spinner fx:id="regioncutsSPN" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                              <Label text="Date Sorting:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                              <ChoiceBox fx:id="dateSortingChoiceBox" prefWidth="150.0" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+                              <Label text="Page Size:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+                              <Spinner fx:id="pageSizeSPN" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                              <Label text="Region Cuts:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+                              <Spinner fx:id="regioncutsSPN" GridPane.rowIndex="2" GridPane.columnIndex="1" />
                            </children>
                         </GridPane>
                      </content>
