--- a/src/main/resources/com/confer/imgstoremini/ViewImageUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/ViewImageUI.fxml
@@ -3,7 +3,6 @@
 <?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.ViewImageController">
@@ -14,18 +13,18 @@
       <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <!-- Message Section -->
-            <TitledPane text="Message" expanded="true">
+            <TitledPane expanded="true" text="Message">
                <content>
                   <TextField fx:id="messageBox" disable="true" promptText="Message" />
                </content>
             </TitledPane>
 
             <!-- Image Details Section -->
-            <TitledPane text="Image Details" expanded="true">
+            <TitledPane expanded="true" text="Image Details">
                <content>
                   <VBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <TextArea fx:id="tagsImg" minWidth="300.0" prefHeight="133.0" prefWidth="478.0" promptText="Image Tags" wrapText="true" />
+                        <TextArea fx:id="tagsImg" minWidth="300.0" prefHeight="205.0" prefWidth="478.0" promptText="Image Tags" wrapText="true" />
                         <Label fx:id="dateAddedLbl" text="Date Added: %s %s" />
                         <TextField fx:id="imageTitleField" promptText="Image Title" />
                      </children>
@@ -34,14 +33,14 @@
             </TitledPane>
 
             <!-- Image Display Section -->
-            <TitledPane text="Image Preview" expanded="true">
+            <TitledPane expanded="true" text="Image Preview">
                <content>
-                  <StackPane fx:id="viewImageStackPane"/>
+                  <StackPane fx:id="viewImageStackPane" />
                </content>
             </TitledPane>
 
             <!-- Action Buttons Section -->
-            <TitledPane text="Actions" expanded="true">
+            <TitledPane expanded="true" text="Actions">
                <content>
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
