Added Component Factory

--- a/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
@@ -41,12 +41,14 @@
                               <Spinner fx:id="meanshiftSPN" GridPane.rowIndex="1" GridPane.columnIndex="1" />
                               <Label text="Mean Shift Convergence:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
                               <Spinner fx:id="meanShiftConvergenceSPN" GridPane.rowIndex="2" GridPane.columnIndex="1" />
-                              <Label text="Spectral Clustering Iterations:" GridPane.rowIndex="3" GridPane.columnIndex="0" />
-                              <Spinner fx:id="spectralSPN" GridPane.rowIndex="3" GridPane.columnIndex="1" />
-                              <Label text="Gaussian Mixture Model Iterations:" GridPane.rowIndex="4" GridPane.columnIndex="0" />
-                              <Spinner fx:id="gmmSPN" GridPane.rowIndex="4" GridPane.columnIndex="1" />
-                              <Label text="GMM Max Height, Width Resize:" GridPane.rowIndex="5" GridPane.columnIndex="0" />
-                              <Spinner fx:id="gmmHeightWidthSPN" GridPane.rowIndex="5" GridPane.columnIndex="1" />
+                              <Label text="Mean Shift Bandwidth:" GridPane.rowIndex="3" GridPane.columnIndex="0" />
+                              <Spinner fx:id="meanShiftBandWidthSPN" GridPane.rowIndex="3" GridPane.columnIndex="1" />
+                              <Label text="Spectral Clustering Iterations:" GridPane.rowIndex="4" GridPane.columnIndex="0" />
+                              <Spinner fx:id="spectralSPN" GridPane.rowIndex="4" GridPane.columnIndex="1" />
+                              <Label text="Gaussian Mixture Model Iterations:" GridPane.rowIndex="5" GridPane.columnIndex="0" />
+                              <Spinner fx:id="gmmSPN" GridPane.rowIndex="5" GridPane.columnIndex="1" />
+                              <Label text="GMM Max Height, Width Resize:" GridPane.rowIndex="6" GridPane.columnIndex="0" />
+                              <Spinner fx:id="gmmHeightWidthSPN" GridPane.rowIndex="6" GridPane.columnIndex="1" />
                            </children>
                         </GridPane>
                      </content>
