Code Cleaning, Refactoring, and Reorganizing

--- a/src/main/resources/com/confer/imgstoremini/components/AddImageUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/components/AddImageUI.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.AddImageContoller">
+<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.components.AddImageContoller">
    <stylesheets>
-      <URL value="@styles/dark-theme.css" />
+      <URL value="@../styles/dark-theme.css" />
    </stylesheets>
    <children>
       <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
