--- a/src/main/resources/com/confer/imgstoremini/components/PaletteUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/components/PaletteUI.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.PaletteUIController">
+<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.components.PaletteUIController">
     <stylesheets>
-        <URL value="@styles/dark-theme.css" />
+        <URL value="@../styles/dark-theme.css" />
     </stylesheets>
     <children>
         <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
