--- a/src/main/resources/com/confer/imgstoremini/components/PreviewImageComponentUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/components/PreviewImageComponentUI.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.PreviewImageComponentUIController">
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.components.PreviewImageComponentUIController">
    <stylesheets>
-      <URL value="@styles/dark-theme.css" />
+      <URL value="@../styles/dark-theme.css" />
    </stylesheets>
    <children>
       <VBox alignment="CENTER" spacing="15.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
