--- a/src/main/resources/com/confer/imgstoremini/components/PureViewUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/components/PureViewUI.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.PureViewUIController">
+<BorderPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.components.PureViewUIController">
     <stylesheets>
-        <URL value="@styles/dark-theme.css" />
+        <URL value="@../styles/dark-theme.css" />
     </stylesheets>
     <top>
         <ToolBar>
