--- a/src/main/resources/com/confer/imgstoremini/components/SettingsConfigUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/components/SettingsConfigUI.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.SettingsConfigUIController">
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.components.SettingsConfigUIController">
    <stylesheets>
-      <URL value="@styles/dark-theme.css" />
+      <URL value="@../styles/dark-theme.css" />
    </stylesheets>
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
