--- a/src/main/resources/com/confer/imgstoremini/MainUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/MainUI.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane stylesheets="styles/dark-theme.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.MainUIController">
+<AnchorPane prefHeight="700.0" prefWidth="700.0" stylesheets="styles/dark-theme.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.MainUIController">
    <stylesheets>
       <URL value="@styles/dark-theme.css" />
    </stylesheets>
